<resources>
    <string name="app_name">Comcore</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_group">New Group</string>
    <string name="action_main_activity">Main Screen</string>

    <!-- General Buttons -->
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="join">Join</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="give">Give</string>
    <string name="select">Select</string>

    <!-- Create Group -->
    <string name="title_create_group">Create A New Group</string>
    <string name="check_list">Add A Group Task List</string>
    <string name="check_chat">Add A Group Chat</string>
    <string name="check_calendar">Add a Group Calendar</string>
    <string name="label_add_m">Add Members To Your Group</string>
    <string name="label_add_f">Add Features To Your Group</string>
    <string name="add_m_contacts">Add From Contacts</string>
    <string name="add_m_email">Add From Email</string>
    <string name="list_of_members">Total Members: </string>

    <!-- Settings -->
    <string name="title_settings">Settings</string>

    <!-- Login -->
    <string name="title_login">Login To Your Account</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="create_user">Create an Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="pick_new_password">Pick a new password:</string>

    <!-- Create User -->
    <string name="label_cu_name">Enter Your Name</string>
    <string name="label_cu_password">Enter Your Password</string>
    <string name="label_cu_email">Enter Your Email</string>
    <string name="label_cu_dob">Enter Your Date of Birth</string>
    <string name="confirm_email">Enter the confirmation code that was sent to your email address:</string>

    <!-- Group Menu -->
    <string name="view_members">View Members</string>
    <string name="invite_member">Invite Member</string>
    <string name="create_invite_link">Create Invite Link</string>
    <string name="transfer_ownership">Transfer Ownership</string>
    <string name="kick_member">Kick Member</string>
    <string name="mute_member">Mute Member</string>
    <string name="unmute_member">Unmute Member</string>
    <string name="dis_enable_chat">Create Chat</string>
    <string name="add_moderator">Add Moderator</string>
    <string name="remove_moderator">Remove Moderator</string>
    <string name="leave_group">Leave Group</string>
    <string name="group_settings">Group Settings</string>
    <string name="create_sub_group">Create Sub-Group</string>

    <!-- Create Link -->
    <string name="create_link_does_expire">Do you want the invite link to expire?</string>
    <string name="create_link_copied">The link was copied to your clipboard.</string>
    <string name="error_event_past">The calendar event cannot be in the past.</string>

    <!-- Error Messages -->
    <string name="error_cannot_connect">Cannot connect to server.</string>
    <string name="error_link_invalid">This link does not exist.</string>
    <string name="error_link_expired">This link has expired.</string>
    <string name="error_does_not_exist">There is no account with that email address.</string>
    <string name="error_invalid_password">Invalid password. Please try again.</string>
    <string name="error_already_exists">An account with that email address already exists.</string>
    <string name="error_incorrect_code">Incorrect code. Please try again.</string>
    <string name="error_missing_data">Please enter all necessary information.</string>
    <string name="error_datetime_past">The date and time cannot be in the past.</string>

    <string name="error_unknown">An error occurred.</string>
    <string name="error_set_role">The role of the user could not be changed.</string>
    <string name="error_send_invite">The invitation could not be sent.</string>
    <string name="error_cannot_kick">The user could not be kicked.</string>
    <string name="error_cannot_mute">The user could not be muted.</string>
    <string name="error_cannot_unmute">The user could not be unmuted.</string>
    <string name="error_module_not_selected">No module type selected.</string>
    <string name="error_unknown_module_type">An unknown type of module was received.</string>
    <string name="error_already_complete">The task has already been completed.</string>
    <string name="error_already_in_progress">The task is already assigned.</string>
    <string name="error_cannot_uncomplete">You do not have the permission to remove the completion status.</string>
    <string name="error_incorrect_format">The input format is incorrect.</string>
    <string name="error_logged_out">Your login information has expired.\nPlease log back in.</string>

    <string name="cc_leave_group">Are you sure you want to leave the group?</string>

    <!-- Success Messages -->
    <string name="success_set_role">The role of the user was successfully changed.</string>
    <string name="success_send_invite">The invitation was sent!</string>
    <string name="event_approval_needed">Events for this group now need the approval of a moderator</string>
    <string name="event_approval_not_needed">Events for this group can now be added by any user</string>

    <!-- Invitation Messages -->
    <string name="view_invites">View Invitations</string>

    <string name="error_missing_pass">Please enter a new password.</string>

    <string name="pick_add_moderator">Pick a new moderator.</string>
    <string name="pick_remove_moderator">Pick a moderator to remove.</string>
    <string name="pick_transfer_ownership">Pick a new owner.</string>
    <string name="pick_kick_user">Pick a user to kick.</string>
    <string name="pick_mute_user">Pick a user to mute.</string>
    <string name="pick_unmute_user">Pick a user to unmute.</string>

    <!-- View Members -->
    <string name="select_action">What do you want to do?</string>
    <string name="select_member">Select a Member</string>

    <!-- Notification Channels -->
    <string name="ch_name_message">Chat Messages</string>
    <string name="ch_desc_message">Notifications for messages received in chats.</string>
    <string name="ch_name_task">Tasks</string>
    <string name="ch_desc_task">Notifications for tasks added to task lists.</string>
    <string name="ch_name_event">Events</string>
    <string name="ch_desc_event">Notifications for upcoming calendar events.</string>
    <string name="ch_name_poll">Polls</string>
    <string name="ch_desc_poll">Notifications for new polls.</string>
    <string name="ch_name_invite">Group Invites</string>
    <string name="ch_desc_invite">Notifications for invitations to join new groups.</string>
    <string name="ch_name_status">Group Status Changes</string>
    <string name="ch_desc_status">Notifications for changes to your status in a group.</string>

    <!-- Tasklist Default -->
    <string name="create_task">Create Task</string>
    <string name="tl_list_name_default">Default Tasklist Name</string>
    <string name="tl_description_default">Default Task</string>
    <string name="title_create_task">Create A Task</string>
    <string name="label_create_task_description">Enter the task description</string>
    <string name="not_completed">Not Completed</string>
    <string name="completed">Completed!</string>
    <string name="delete_task">Delete A Task</string>
    <string name="complete_task">Choose A Task To Complete</string>
    <string name="in_progress_task">Choose A Task To Claim</string>
    <string name="complete_task_short">Complete A Task</string>
    <string name="in_progress_task_short">Claim A Task</string>
    <string name="no_deadline">No Deadline</string>
    <string name="task_deadline_date_label">Deadline Date (MM/DD/YYYY)</string>
    <string name="task_deadline_time_label">Deadline  (HH:MM)</string>

    <!-- Create Module Dialog -->
    <string name="create_module">Create Module</string>
    <string name="create_module_name_label">Name the Module</string>
    <string name="create_module_type_label">Choose the Module Type</string>
    <string name="task_list_module_label">Task List</string>
    <string name="chat_module_label">Chat</string>
    <string name="pinned_module_label">Pinned Messages</string>
    <string name="calendar_module_label">Calendar</string>
    <string name="dummy_module_label">Dummy Button</string>

    <!-- Notification Settings -->
    <string name="all_switch_label">Change Settings For All Groups</string>
    <string name="current_switch_label">Change Settings For The Current Group</string>
    <string name="two_factor_switch">Enable two-factor authentication</string>
    <string name="mention_all_switch">Enable notifications for mentions in all groups</string>
    <string name="mute_all_switch">Enable notifications for all groups</string>
    <string name="mention_current_switch">Enable notifications for mentions in this group</string>
    <string name="mute_current_switch">Enable notifications for this group</string>


    <!-- Pin Groups -->
    <string name="pin_group">Pin a Group</string>
    <string name="pin_group_desc">Choose A Group To Pin</string>

    <!-- Pin Messages -->
    <string name="pin_message">Pin a Message</string>
    <string name="create_pinned">Create Pinned Messages</string>

    <string name="pinned_messages">Pinned Messages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_file">Upload File</string>
    <!-- Create Event -->
    <string name="create_event_label">Create an Event</string>
    <string name="pick_date_label">Choose a Date</string>
    <string name="update_event_approval">Change Event Approval</string>
    <string name="create_event">Create Event</string>
    <string name="select_start_time">Select the Start Time</string>
    <string name="select_end_time">Select the End Time</string>
    <string name="no_time_selected">No Time Selected</string>

    <!-- Calendar -->
    <string name="view_pending_events">View Pending Events</string>
    <string name="view_all_events">View All Events</string>
    <string name="create_event_start_date">Start Date (MM/DD/YYYY)</string>
    <string name="create_event_end_date">End Date (MM/DD/YYYY)</string>
    <string name="create_event_start_time">Start Time (HH:MM)</string>
    <string name="create_event_end_time">End Time (HH:MM)</string>
    <string name="delete_events">Remove Event</string>
    <string name="pin_event">Pin Event</string>
    <string name="pin_event_title">Pin event to the bulletin board</string>

    <string name="remove_event">Remove Event</string>
    <string name="view_events">View Events</string>

    <!-- Polling -->
    <string name="polling">Poll</string>
    <string name="create_poll">Create Poll</string>
    <string name="delete_poll">Delete Poll</string>
    <string name="view_results">Results</string>
    <string name="create_poll_label">Create A Poll</string>
    <string name="options_label">Poll Choice</string>
    <string name="create_options_label">Create Choice</string>

    <!-- Bulletin Board -->
    <string name="bulletin_board">Bulletin Board</string>
    <string name="bulletin_board_label">Upcoming events within the next week</string>


</resources>