<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh_button"
        android:title="@string/refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/create_task"
        android:title="@string/create_task"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/delete_task"
        android:title="@string/delete_task"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/complete_task"
        android:title="@string/complete_task_short"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/progress_task"
        android:title="@string/in_progress_task_short"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
