<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/create_event"
        android:title="@string/create_event"
        app:showAsAction="never" />

    <item
        android:id="@+id/group_calendar_view_all_events"
        android:title="@string/view_all_events"
        app:showAsAction="never" />

    <item
        android:id="@+id/group_calendar_view_upcoming_events"
        android:title="View Upcoming Events"
        app:showAsAction="never"/>

    <item
        android:id="@+id/modify_event"
        android:title="@string/modify_events"
        app:showAsAction="never"/>
    <item
        android:id="@+id/remove_event"
        android:title="@string/remove_event"
        app:showAsAction="never" />
    <group android:id="@+id/menu_group_moderator_actions">
        <item
            android:id="@+id/view_pending_events"
            android:title="@string/view_pending_events"
            app:showAsAction="never" />
        <item
            android:id="@+id/pin_event"
            android:title="@string/pin_event"
            app:showAsAction="never" />
        <item
            android:id="@+id/require_approval"
            android:title="@string/update_event_approval" />
    </group>

    <item
        android:id="@+id/group_calendar_back_button"
        android:title="@string/back"
        app:showAsAction="never"/>
</menu>