<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- This menu item is only showed to group moderators and the owner -->
    <group android:id="@+id/menu_moderator_not_direct">
        <item
            android:id="@+id/invite_member"
            android:title="@string/invite_member"
            app:showAsAction="never" />
        <item
            android:id="@+id/create_invite_link"
            android:title="@string/create_invite_link" />
    </group>
    <group android:id="@+id/menu_group_moderator_actions">
        <item
            android:id="@+id/create_module"
            android:title="@string/create_module"
            app:showAsAction="never" />
    </group>

    <!-- These menu items are only showed to the group owner -->
    <group android:id="@+id/menu_group_owner_actions">

        <item
            android:id="@+id/create_sub_group"
            android:title="@string/create_sub_group"
            app:showAsAction="never" />

    </group>

    <!-- These menu items are only showed in a group fragment -->
    <group android:id="@+id/menu_group_actions">
        <item
            android:id="@+id/view_members"
            android:title="@string/view_members"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/leave_group"
            android:title="@string/leave_group"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/settingsFragment"
            android:title="@string/action_settings"
            app:showAsAction="never" />
    </group>

</menu>